fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@
 @media (max-width:500px){
   #app{
     flex-wrap: wrap;;
+    margin: 0px;
+    padding: 0px;
   }
 
   #header{
@@ -69,14 +71,15 @@
   }
 
   #nav{
-    width: 100%;
+    width: 105%;
     height: 20%;
+    
   }
 
   #main{
     flex-direction: column;
     width: 100vw;
-    height: 50%;
+    height: 100%;
   }
 
   #articles{
@@ -95,7 +98,8 @@
 
 @media (min-width:501px) and (max-width:1024px){
   #app{
-    flex-wrap: wrap;;
+    /* flex-wrap: wrap;; */
+    width: 100%;
   }
 
   #header{
@@ -118,8 +122,8 @@
 
   #main{
     flex-direction: row;
-    width: 100vw;
-    height: 50%;
+    width: 100%;
+    height:80%;
   }
 
   #articles{
